--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
         </main>
         <footer>
             <a href="https://giphy.com/"><img class="giphylogo" src="img/Poweredby_640px-Black_VertLogo.png" alt="Giphy web site"></a>
+            <p>Design and code by <a href="https://gustavsvedung.github.io">Gustav Svedung</a></p>
+            <p><a href="http://dimsemenov.com/plugins/magnific-popup/">Magnific Popup</a> lightbox plugin by <a href="http://dimsemenov.com">Dmitry Semenov</a></p>
         </footer>
         <!--jQuery-->
         <script src="js/jquery-3.2.0.min.js"></script>
