--- a/index_alt.html
+++ b/index_alt.html
@@ -24,7 +24,9 @@
             <p>Enter anything to search the GIF image database</p>
         </main>
         <footer>
-            <p>Powered by <a href="http://www.giphy.com">Giphy</a></p>
+            <p class="giphytext">Powered by <a href="http://www.giphy.com">Giphy</a></p>
+            <p>Design and code by <a href="https://gustavsvedung.github.io">Gustav Svedung</a></p>
+            <p><a href="http://dimsemenov.com/plugins/magnific-popup/">Magnific Popup</a> lightbox plugin by <a href="http://dimsemenov.com">Dmitry Semenov</a></p>
         </footer>
         <!--jQuery-->
         <script src="js/jquery-3.2.0.min.js"></script>
